--- a/_posts/2020-10-26-tidymodels-dvc-mashup/tidymodels-dvc-mashup.Rmd
+++ b/_posts/2020-10-26-tidymodels-dvc-mashup/tidymodels-dvc-mashup.Rmd
@@ -10,7 +10,7 @@ output:
     self_contained: false
 categories:
   - data_science
-preview: modelops.png
+preview: images/modelops.png
 ---
 
 ```{r setup, include=FALSE}
