--- a/_posts/2020-10-26-tidymodels-dvc-mashup/tidymodels-dvc-mashup.Rmd
+++ b/_posts/2020-10-26-tidymodels-dvc-mashup/tidymodels-dvc-mashup.Rmd
@@ -163,11 +163,11 @@ My final goal was to fit an ensemble model. Unfortunately, I hit an error using 
 2.  Under the hood, the ensemble is fit with glmnet, but buried in quite a few layers of tidymodels abstraction. `cv.glmnet` works as an alternative, but with a nasty side affect. You have to do all the work manually to get a final fitted object that glues all the prior models, workflows, and the ensemble together.\
 3.  When those nice print methods I mentioned earlier fail, try `attributes` to see "all the stuff" tidymodels is carrying around.
 
-## **The Mashup**
+## The Mashup
 
 ### Adding DVC
 \
-*Once I had a functional R Markdown document that was fitting models, it was time to try this ModelOps thing. Now ModelOps can consist of a lot of things, but in this case I was interested in trying out the training side of model operations - tracking experiments and enabling collaboration. I'll save the monitoring side - deploying models to production and watching them overtime - for another vacation.
+Once I had a functional R Markdown document that was fitting models, it was time to try this ModelOps thing. Now ModelOps can consist of a lot of things, but in this case I was interested in trying out the training side of model operations - tracking experiments and enabling collaboration. I'll save the monitoring side - deploying models to production and watching them overtime - for another vacation.
 
 DVC is oriented around pipelines. Unfortunately, this appeared to clash a bit with my R Markdown workflow. For one, the R Markdown document "drove" all the modeling code, and this code was not amenable to being managed by an external pipeline. Another problem was that the tidymodels packages, especially `tune` and `stacks,` handled the parameters and "experiments" that DVC wanted to control.\
 \
@@ -175,7 +175,7 @@ I decided to mostly ignore the first challenge. If my data was large, or the pre
 
 For the second problem, I decided to go with a hyper-hyper-parameter strategy. Essentially, I allowed `tune` and tidymodels to handle the hyper-parameter optimization within a model, but I used DVC to handle "parameters" that would fundamentally change the type of model at play. In other words, my "PR experiments" amounted to asking questions like "what if our ensemble uses ridge regression instead of LASSO?" as opposed to questions like "what if each forest has more or less trees?". Is this splitting hairs? You betcha. In fact, you can see artifacts in the code where I did use DVC for "\# of trees" and where I attempted to use the tidymodels code for optimizng the ensemble. My advice: "experiments" in most ModelOps settings come with overhead and complexity, so use them to track whatever changes really matter to you.
 
-> In the current sate of MLOps, there aren't great boundaries.
+> In the current state of ModelOps, there aren't great boundaries.
 
 I think this article explains this [nascent border-less state well](https://towardsdatascience.com/the-problem-with-ai-developer-tools-for-enterprises-and-what-ikea-has-to-do-with-it-b26277841661?gi=1a3a6ab5f7e7).\
 \
