forgot tidytuesday post short description

--- a/_posts/2020-10-27-a-windy-tidytuesday/a-windy-tidytuesday.Rmd
+++ b/_posts/2020-10-27-a-windy-tidytuesday/a-windy-tidytuesday.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "A Windy TidyTuesday"
 description: |
-  A short description of the post.
+  Using crosstalk to analyze spatio-temporal data.
 author:
   - name: Sean Lopp
 date: 10-27-2020
