--- a/about.Rmd
+++ b/about.Rmd
@@ -4,11 +4,11 @@ title: "About"
 
 ![](images/paste-C11888D2.png){style="width: 144px;"}
 
-My name is Sean Lopp. This is a *personal* blog, and as such I post about a wide range of topics that reflect my *person,* including: data science, open source software, bikes, product management, and Catholocism.
+My name is Sean Lopp. I post about a wide range of topics including: data science, open source software, product management, and bikes.
 
-I am currently a sales engineer at RStudio, a B corporation that supports open source software for data science. I was previously RStudio's second "first product manager", a sales rep, and a data scientist at NREL. I studied applied math at the Colorado School of Mines. \
+I currently lead product teams at RStudio, a B corporation that supports open source software for data science. I was previously an ML engineer, a sales rep, and a data scientist at NREL. I studied applied math at the Colorado School of Mines. \
 
 While the posts in this blog **are my own**, I've also written for RStudio, NREL, and Mines. You can view my [research profile here](https://www.semanticscholar.org/author/Sean-Lopp/8719760) where I've accidentally gotten an h-index of 4! I've also written extensively about [environment management](https://environments.rstudio.com) in R.
 
-I've also given a fair share of talks, and the prettiest versions of those live [here](https://rstudio.com/speakers/sean-lopp/).
+If you are looking for videos or pretty versions of talks, those live [here](https://rstudio.com/speakers/sean-lopp/).
 
