--- a/_posts/2021-09-08-to-the-behemoth/to-the-behemoth.Rmd
+++ b/_posts/2021-09-08-to-the-behemoth/to-the-behemoth.Rmd
@@ -83,7 +83,9 @@ In closing this short story, I still struggle to imagine that this chapter is co
 
 10. As a leader, "showing up" to every meeting is important. No team meeting or 1:1 can be handled casually, so skip it if you're not in the right head space. Your job is almost always to present ideas with optimism, absorb (not amplify) the natural concerns around ambiguity, and remain professional. All that said, it can be really helpful to have a few peers to whom you can vent and "let down your guard", but gossip isn't a shortcut to being considered genuine.
 
-11. After countless hours in many airports I can confirm that O'hare is the worst, JFK is the most inconvenient, and as Phil would proudly tell you, Indy is the best. A few other airport comments - if you are going to downtown Chicago, take the blue line not a rental car. (Except if it is Lalapalooza week, then definitely do NOT take the train.) In Denver, the fastest way to get from driving to your gate is to park in the southern end of the west lot, walk through the Westin, up the escalators, through South security, and onto the train. Patagonia black hole 40L duffles are _the optimal 2-3 day trip bag_ as they can fit under the seat in a pinch and fit on your back. People who roll their luggage are slower, can't run down escalators, and look like idiots walking downtown. Never gate check a bag. Only fly direct. TSA pre-check is the single best investment you can make.
+11. Keyboard shortcuts in gmail are clutch, as is Alfred, zsh, the reveal bullshit plugin, and hard restarting chrome every morning.
+
+12. After countless hours in many airports I can confirm that O'hare is the worst, JFK is the most inconvenient, and as Phil would proudly tell you, Indy is the best. A few other airport comments - if you are going to downtown Chicago, take the blue line not a rental car. (Except if it is Lalapalooza week, then definitely do NOT take the train.) In Denver, the fastest way to get from driving to your gate is to park in the southern end of the west lot, walk through the Westin, up the escalators, through South security, and onto the train. Patagonia black hole 40L duffles are _the optimal 2-3 day trip bag_ as they can fit under the seat in a pinch and fit on your back. People who roll their luggage are slower, can't run down escalators, and look like idiots walking downtown. Never gate check a bag. Only fly direct. TSA pre-check is the single best investment you can make.
 
 ## Thoughts about Data, Analytics, and Statistics
 
@@ -108,6 +110,6 @@ Anyone who knows me well (or even a little) knows I hate the Gartner Magic Quadr
 
 ## Looking towards Google 
 
-I'm not sure what to expect next, except that Google will be different. I hope this pandemic ends and I get to enjoy their famed lunches. I hope that I can get up to speed on BI, that SQL really does continue to eat the world, and that JavaScript becomes less confusing. I am excited to learn about the GCP landscape, especially data engineering which is a critical part of my SQL + JavaScript dominates the world prediction. Most of all, I hope I am fortunate enough to find myself with a team that is half as humble, hungry, and kind as the colleagues I am leaving behind.
+I'm not sure what to expect next, except that Google will be different. I hope this pandemic ends and I get to enjoy their famed lunches. I hope that I can get up to speed on BI, that SQL really does continue to eat the world, and that JavaScript becomes less confusing. I am excited to learn about the GCP landscape, especially data engineering which is a critical part of my SQL + JavaScript dominates the world prediction. Most of all, I hope I am fortunate enough to find myself with a team that is half as humble, hungry, and kind as my current colleagues and friends.
 
 
