--- a/about.Rmd
+++ b/about.Rmd
@@ -6,9 +6,12 @@ title: "About"
 
 My name is Sean Lopp. I post about a wide range of topics including: data science, open source software, product management, and bikes.
 
-I currently lead product teams at RStudio, a B corporation that supports open source software for data science. I was previously an ML engineer, a sales rep, and a data scientist at NREL. I studied applied math at the Colorado School of Mines. \
+I am currently the first sales engineer at Elementl, the team behind Dagster.
 
-While the posts in this blog **are my own**, I've also written for RStudio, NREL, and Mines. You can view my [research profile here](https://www.semanticscholar.org/author/Sean-Lopp/8719760) where I've accidentally gotten an h-index of 4! I've also written extensively about [environment management](https://environments.rstudio.com) in R.
+I worked as a data analytics customer engineer at Google, a sales engineer at Looker, and a sales and product leader at RStudio. I was also a data scientist at NREL while I studied applied math at the Colorado School of Mines. 
+
+While the posts in this blog **are my own**, I've also written for [Google](https://cloud.google.com/blog/products/data-analytics/explainable-ai-using-bigquery-machine-learning-and-looker), RStudio, NREL, and Mines. You can view my [research profile here](https://www.semanticscholar.org/author/Sean-Lopp/8719760) where I've accidentally gotten an h-index of 4! I've also written extensively about [environment management](https://environments.rstudio.com) in R.
 
 If you are looking for videos or pretty versions of talks, those live [here](https://rstudio.com/speakers/sean-lopp/).
 
+This [site](https://github.com/slopp/loppsided) is built using the R package distill and hosted by Netlify.
