a horrible mistake has been post-humously fixed

--- a/_posts/2021-09-08-to-the-behemoth/to-the-behemoth.Rmd
+++ b/_posts/2021-09-08-to-the-behemoth/to-the-behemoth.Rmd
@@ -38,7 +38,7 @@ A brief short story to reassure you that I still hadn't mastered this profession
 
 5. 2019 and 2020 marked the beginning of the end, though I didn't know it at the time. In mid-2019 I formally became a full time product manager --  RStudio's first. I was woefully unprepared, and in hindsight, this position wasn't really a fair one. I was tasked with balancing our executive team's ever-changing vision, our legitimate but diverse customer requests, and our dev team's daily execution. I was soon crushed. Luckily at this time I was able to rely on the wisdom of Kris Overholt and Daniel Rodriguez,  two ex-PMs who briefly worked at RStudio and instilled in me both an earnest skepticism of the business and a keen nose for bullshit. At this time Jeff left to pursue a new team at RStudio, and so I found myself managing both RStudio Package Manager and RStudio Connect. A wiser person would have built a product managemnt team, I attempted to forge ahead on my own. I also refused to give up my work with customers which I rightly thought would ground my product work, but which I incorrectly assumed would magically take less time. A perfect recipe for burnout. This was also the period when I began to realize an unhealthy relationship with Tareef, RStudio's president. I hesitate to write much about Tareef, I won't need a blogpost to remember him. He was both a paternal figure genuinely invested in my career, an interesting corporate philosopher, and my strategic arch-enemy. I wanted to build a process that took data from our customers, aligned around a strategic vision, and then executed against a prioritized roadmap. In many ways Tareef wanted the same thing, but lived at a different level of visibility. He struggled to share his vision, and I lacked the leadership tools to clarify it, and so I often felt undermined when he would critique the team's execution or focus while simultaneously introducing new initiatives. The only way I lasted until the end of 2020 was because I was joined in product by Kelly. Kelly is one of the most strategic and empathetic people I've ever met, and in Jan 2020 she joined me in working on Connect. Mentoring Kelly was hard for me, not because of Kelly - whose work was always brilliant and 3 steps ahead of my own, but because the challenges she felt and reported back to me caused me 10x the frustration as when I felt them myself. I realized during this time just how hard it can be to be a manager or mentor, I was much better suited to dealing with shit than telling someone I cared about that I couldn't remove their obstacles. By Oct 2020 I was constantly angry, burnt out, and quick to boil into frustration with others. My wife said I had to quit. I had promised Tareef if it came to that I would give him a few months notice, so in October I told him I needed to leave. A few other things are worth noting about the fall of 2020. For one, my old solutions engineering team was imploding. Skeptical Kris had left, leaving a wake and a big hole (because he was also the most gifted solutions engineer I've worked with). Cole and James (who was and is my constant motivation in RStudio's cycling strava) were both on paternity leave. Edgar, the other old goat from 2017, had abruptly quit at the beginning of the year. This proved a tough load, and it ultimately contributed to Nathan stepping away from the director role. In short, it was a total and complete dumpster fire, and I found myself in the midst of my struggles with product attempting to hold together the fragile remains of the SE team.
 
-6. Enter 2021. My big question after telling Tareef I was done was "what's next?". This question turned out to be quite the doozy. I temporarily opted to return to solutions engineering, and like most things in my life this short term choice turned out to be insanely lucky. After 9 months of reflection it is easier for me to understand that sales engineering is where I should continue next, but that realization came after quite a few false starts. I applied and almost accepted a consulting job that would have returned me to my college work of energy analytics and 10 hour days of coding. I applied and was accepted to law school. I even read all about other product roles, teams, and domains. In June I took two weeks off to attend a wedding in Alaska and travel the state. During this time, and there was a LOT of time driving, I realized that I really enjoyed my time with our sales team. I have been lucky to work alongside really excellent account executives in Jason Miles, Kevin Hayden, Sabrina, Lauren, Nichole, Dylan, and countless others. Unlike product management, where the objectives are ambiguous and the time frames are measured in years, sales had a clear directive. Yes, there is still an art to asking questions and aligning around value, but our team was always on the same page. The rewards were satisfying and aligned with compensation. The customers were diverse and interesting. Finally, in my year of renewed SE focus, I rediscovered that I was really good at sales engineering. I had unknowingly felt like an imposter as a product manager, always quite certain that I had no business representing the needs of any users, desperately trying to read the market tea leaves while directing millions of dollars in dev investment. Ultimately I realized I was in the right role as an SE,  which led to a natural question, how do I get better and go further? This question has taken awhile to answer, but it is what leads me to Google. I need to be exposed to something outside of RStudio, to learn how other organizations and sales teams operate, to sell different products, in different frameworks, to different customers. I realized, with both happiness and sorrow, that I need to leave RStudio.
+6. Enter 2021. My big question after telling Tareef I was done was "what's next?". This question turned out to be quite the doozy. I temporarily opted to return to solutions engineering, and like most things in my life this short term choice turned out to be insanely lucky. After 9 months of reflection it is easier for me to understand that sales engineering is where I should continue next, but that realization came after quite a few false starts. I applied and almost accepted a consulting job that would have returned me to my college work of energy analytics and 10 hour days of coding. I applied and was accepted to law school. I even read all about other product roles, teams, and domains. In June I took two weeks off to attend a wedding in Alaska and travel the state. During this time, and there was a LOT of time driving, I realized that I really enjoyed my time with our sales team. I have been lucky to work alongside really excellent account executives in Rachael Dempsey (also the most gifted community marketer I've ever met), Jason Miles, Kevin Hayden, Sabrina, Lauren, Nichole, Dylan, and countless others. Unlike product management, where the objectives are ambiguous and the time frames are measured in years, sales had a clear directive. Yes, there is still an art to asking questions and aligning around value, but our team was always on the same page. The rewards were satisfying and aligned with compensation. The customers were diverse and interesting. Finally, in my year of renewed SE focus, I rediscovered that I was really good at sales engineering. I had unknowingly felt like an imposter as a product manager, always quite certain that I had no business representing the needs of any users, desperately trying to read the market tea leaves while directing millions of dollars in dev investment. Ultimately I realized I was in the right role as an SE,  which led to a natural question, how do I get better and go further? This question has taken awhile to answer, but it is what leads me to Google. I need to be exposed to something outside of RStudio, to learn how other organizations and sales teams operate, to sell different products, in different frameworks, to different customers. I realized, with both happiness and sorrow, that I need to leave RStudio.
 
 You may be wondering whats to come of the SE team that was struggling in 2020 and that I luckily rejoined in earnest in 2021. To answer that question I have to introduce a few more characters. Alex Gold joined RStudio in 2019 as an SE after giving an excellent interview with a few too many memes. He is proving to be both a talented "get shit done" organizer and a thoughtful manager who will carry the team. Andrie joined RStudio in 2017 and has had a knack for doing the dirtiest work, and I expect he will continue that trend. David joined RStudio in 2020 and shares my knack for sarcasm, dread, and picking up new tools quickly and holistically. Others deserve mention as marvelous people who I worked with less but still hold dear: Gagan, Ian, Ralf, Mark, and Lou (the most diligently organized product marketer).
 
